--- a/gallery.html
+++ b/gallery.html
@@ -255,14 +255,223 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 
 <li>
-<a href="images/gallery21.jpeg" class="swipebox" title="My Caption">
-<div class="image"><img src="images/gallery21.jpeg">
+<a href="images/gallery22.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery22.jpeg">
 <div class="overlay"><i class="fa fa-search-plus"></i></div>
 </div></a>
 </li>
 
 
 
+
+
+<li>
+<a href="images/gallery23.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery23.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+<li>
+<a href="images/gallery24.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery24.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery25.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery25.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery26.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery26.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery27.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery27.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery28.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery28.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery29.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery29.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery30.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery30.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery31.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery31.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery32.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery32.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery33.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery33.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery34.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery34.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery35.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery35.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery36.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery36.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery37.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery37.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery38.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery38.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery39.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery39.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery40.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery40.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery41.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery41.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery42.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery42.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery43.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery43.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery44.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery44.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery45.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery45.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery46.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery46.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery47.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery47.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery48.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery48.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery49.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery49.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+<li>
+<a href="images/gallery50.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery50.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
+
+
+
+
+
+<li>
+<a href="images/gallery51.jpeg" class="swipebox" title="My Caption">
+<div class="image"><img src="images/gallery51.jpeg">
+<div class="overlay"><i class="fa fa-search-plus"></i></div>
+</div></a>
+</li>
 
 
 
