--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <i class="fa fa-bars"></i>
 </button>
 
-<a class="navbar-brand logo" href="index.html"><img src="images/logo.jpg" class="img-responsive"  style="height: fit-content;height:7rem;width:23rem;"/></a>
+<a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="height: fit-content;height:7rem;width:23rem;"/></a>
 
 <!-- <a  href="index.html" style="font-weight:bold;color:maroon;font-size:xx-large;margin:3rem;" class="img-responsive"> AL-KHALEEL TRUST </a> -->
 
@@ -237,6 +237,28 @@ Mufti Haseebullah Habeebi
 <a href="activities.html" title="" >Read More</a>
 </div>
 </div>
+
+
+
+
+
+
+<div class="col-md-4 clearfix top-off">
+<div class="grid-content-left"><i class="fa fa-cutlery"></i></div>
+<div class="grid-content-wrapper"><h4>Charity for marriage</h4>
+<p style="text-align:justify;">Al-Khaleel Trust provides the bride with the newest materials needed in the marriage and after marriage ceremonies like food, clothes, beds, jewelry, shoes, etc. The happiness a family gets by securing a girl's life and getting her married to the desired groom, keeping the respect and culture of a family in mind is priceless.</p>
+<a href="activities.html" title="" >Read More</a>
+</div>
+</div>
+
+
+
+
+
+
+
+
+
 
 </div>
 </div>
