--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <i class="fa fa-bars"></i>
 </button>
 
-<a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="height: fit-content;height:7rem;width:23rem;"/></a>
+<a class="navbar-brand logo" href="index.html"><img src="images/logo.png" class="img-responsive"  style="height: fit-content;"/></a>
 
 <!-- <a  href="index.html" style="font-weight:bold;color:maroon;font-size:xx-large;margin:3rem;" class="img-responsive"> AL-KHALEEL TRUST </a> -->
 
